home page update

--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -16,6 +16,14 @@ body {
   margin: 0 !important;
 }
 
+.font2 {
+  font-family: 'Oswald', sans-serif;
+}
+
+.font3 {
+  font-family: 'Roboto', sans-serif;
+}
+
 .hb-wrapper {
   width: 100%;
   overflow: hidden;
@@ -64,6 +72,24 @@ body {
 .hb-container {
   width: 100%;
   max-width: 1200px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+
+.hb-container1 {
+  width: 100%;
+  max-width: 1800px;
+  margin: 0 auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+}
+
+.hb-container2 {
+  width: 100%;
+  max-width: 1440px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
