--- a/assets/styles/_variables.less
+++ b/assets/styles/_variables.less
@@ -5,11 +5,16 @@
   font-size: 16px;
   line-height: 150%;
 
+  --font1: 'Rubik', sans-serif;
+  --font2: 'Oswald', sans-serif;
+  --font3: 'Roboto', sans-serif;
+
   --color-light: #fff;
   --color-dark: #4c484e;
   --color-dark1: #848485;
   --color-dark2: rgba(0, 0, 0, .7);
   --color-dark3: #35363a;
+  --color-dark4: #000;
 
   --color1: hsl(209, 59%, 14%);
   --color1-alter: hsl(209, 39%, 14%);
@@ -33,6 +38,12 @@
   --color7: hsl(39, 100%, 50%);
   --color8: hsl(24, 75%, 50%);
   //end of additional colors that suggested by chatGTP
+
+  //extra front page colors
+  --color9: hsl(358, 84%, 48%);
+  --color9v1: #d72329;
+  --color10: hsl(205, 65%, 41%);
+  //end of extra front page colors
 
   --lh: 150%;
   --transition: all .25s linear;
