--- a/assets/styles/_base.less
+++ b/assets/styles/_base.less
@@ -351,3 +351,44 @@ body {
     background: var(--color2);
   }
 }
+
+//hb text front
+.hb-front-desk {
+  font-family: var(--font2);
+
+  strong {
+    font-size: 24px;
+    letter-spacing: 1px;
+    color: var(--color9);
+    font-weight: 600;
+    text-transform: uppercase;
+  }
+
+  h2 {
+    font-size: 32px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    margin-block: 20px 30px;
+    text-transform: uppercase;
+  }
+
+  p {
+    margin-block: 30px 40px;
+    font-weight: 400;
+    font-family: var(--font3);
+    font-size: 16px;
+    line-height: 112%;
+  }
+
+  &__more {
+    display: table;
+    padding: 14px 20px;
+    background-color: var(--color10);
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-decoration: none;
+  }
+}
+
