--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -182,7 +182,7 @@
 
   border-top: 11px solid var(--color-dark4);
   padding-block: 119px 164px;
-  
+
   @media (max-width: @mobile) {
     padding-block: 50px;
   }
@@ -394,3 +394,155 @@
     margin-top: auto;
   }
 }
+
+.hb-front-text-img {
+  display: flex;
+  flex-wrap: wrap;
+  color: var(--color-light);
+
+  &__item {
+    flex: 1 1 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--color-dark4);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    @media (max-width: @mobile) {
+      flex: 1 1 100%;
+    }
+  }
+
+  &__inner {
+    width: 100%;
+    max-width: 728px;
+    padding: 20px;
+    box-sizing: border-box;
+
+    &.padding-block {
+      padding-block: var(--gap-lg);
+    }
+  }
+
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    @media (max-width: @mobile) {
+      height: auto;
+    }
+  }
+}
+
+//front help
+.hb-front-help {
+  background-color: var(--color9);
+  background-image: url(../img/front-help-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: var(--color-light);
+
+  .hb-container2 {
+    padding-block: 100px 180px;
+
+    @media (max-width: @mobile) {
+      padding-block: 50px;
+    }
+  }
+
+  &__start {
+    color: var(--color-dark4);
+    text-transform: uppercase;
+    font-size: 24px;
+    letter-spacing: 1px;
+    line-height: 145%;
+    padding: 0;
+    margin-bottom: 20px;
+    font-weight: 600;
+  }
+
+  &__heading {
+    margin: 0;
+    margin-bottom: 30px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 32px;
+    line-height: 109%;
+  }
+
+  &__text {
+    width: 100%;
+    max-width: 1227px;
+    font-family: var(--font3);
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    margin: 0 auto;
+  }
+
+  &__holder {
+    margin-top: 93px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: var(--gap-md);
+
+    @media (max-width: @mobile) {
+      margin-top: 40px;
+    }
+  }
+
+  &__item {
+    flex: 1 1 417px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  &__icon {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    padding: 20px;
+    box-sizing: border-box;
+    border: 5px solid var(--color-dark4);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+  }
+
+  &__img {
+    max-width: 120px;
+    max-height: 120px;
+    object-fit: contain;
+    object-position: center center;
+  }
+
+  &__title {
+    margin-block: 25px 30px;
+    font-size: 35px;
+    letter-spacing: 1px;
+    line-height: 100%;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: var(--color-dark4);
+  }
+
+  &__info {
+    font-family: var(--font3);
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+
+.font2 {
+}
+
+.text-center {
+}
+
+
