--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -5,20 +5,21 @@
   background-color: var(--color-dark4);
   background-image: url(../img/hero-bg0.png);
   background-size: cover;
-  background-position: center center;
+  background-position: top center;
   position: relative;
 
   &::before {
     content: '';
     width: 100%;
-    height: 1179px;
+    //height: 1179px;
+    height: 100%;
     position: absolute;
     display: block;
     top: 0;
     left: 0;
     pointer-events: none;
     //z-index: -1;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
+    background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
 
     @media (max-width: @mobile) {
       height: 600px;
@@ -29,10 +30,11 @@
   .hb-container2 {
     position: relative;
     //z-index: 2;
-    padding-block: 671px 70px;
+    //padding-block: 671px 70px;
+    padding-block: 0 70px;
 
     @media (max-width: @mobile) {
-      padding-block: 50px 0;
+      padding-block: 0 0;
     }
   }
 
@@ -58,8 +60,8 @@
     color: var(--color-light);
     text-align: center;
     margin: 0;
+    //margin-bottom: 150px;
     position: relative;
-    margin-bottom: 150px;
     filter: drop-shadow(-1.792px 4.668px 4px rgba(0, 0, 0, 0.34));
     font-weight: 600;
     font-size: 171px;
@@ -68,7 +70,7 @@
     text-transform: uppercase;
 
     @media (max-width: @mobile) {
-      margin-bottom: 50px;
+      margin-bottom: 20px;
       font-size: 50px;
       line-height: 150%;
     }
@@ -78,7 +80,27 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 35px;
+    gap: 20px;
+    padding-block: 20px 150px;
+    position: relative;
+
+    &::before {
+      content: '';
+      width: 200vw;
+      height: 100%;
+      position: absolute;
+      display: block;
+      top: 0;
+      left: -50%;
+      //z-index: -1;
+      pointer-events: none;
+      background: linear-gradient(to top,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, .7) 20%,
+      rgba(255, 255, 255, .9) 50%,
+      rgba(255, 255, 255, .7) 80%,
+      rgba(255, 255, 255, .3) 100%,);
+    }
 
     @media (max-width: @mobile) {
       padding-block: 50px;
@@ -86,27 +108,29 @@
       gap: 10px;
       align-items: flex-start;
 
-      &::before {
-        content: '';
-        width: 200vw;
-        height: 100%;
-        position: absolute;
-        display: block;
-        top: 0;
-        left: -20px;
-        //z-index: -1;
-        pointer-events: none;
-        background: linear-gradient(to bottom,
-        rgba(255, 255, 225, 0) 0%,
-        rgba(255, 255, 225, .7) 5%,
-        rgba(255, 255, 225, .9) 50%,
-        rgba(255, 255, 225, .7) 95%,
-        rgba(255, 255, 225, .3) 100%,);
-      }
+      //&::before {
+      //  content: '';
+      //  width: 200vw;
+      //  height: 100%;
+      //  position: absolute;
+      //  display: block;
+      //  top: 0;
+      //  left: -20px;
+      //  //z-index: -1;
+      //  pointer-events: none;
+      //  background: linear-gradient(to bottom,
+      //  rgba(255, 255, 225, 0) 0%,
+      //  rgba(255, 255, 225, .7) 5%,
+      //  rgba(255, 255, 225, .9) 50%,
+      //  rgba(255, 255, 225, .7) 95%,
+      //  rgba(255, 255, 225, .3) 100%,);
+      //}
     }
   }
 
   &__item {
+    position: relative;
+    z-index: 2;
     //flex: 0 0 152px;
     text-decoration: none;
     display: flex;
@@ -115,9 +139,7 @@
     justify-content: center;
 
     @media (max-width: @mobile) {
-      position: relative;
-      z-index: 2;
-      flex: 0 1 140px;
+      flex: 0 1 90px;
     }
   }
 
@@ -125,30 +147,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 152px;
-    height: 152px;
+    width: 130px;
+    height: 130px;
     padding: 10px;
     overflow: hidden;
     border: 5px solid var(--color-dark4);
     border-radius: 50%;
+    box-sizing: border-box;
 
     @media (max-width: @mobile) {
-      width: 140px;
-      height: 140px;
+      width: 90px;
+      height: 90px;
+      border: 3px solid var(--color-dark4);
     }
   }
 
   &__cat-img {
     display: table;
-    //width: 100%;
-    max-width: 142px;
-    max-height: 142px;
-    //object-fit: contain;
+    width: 70px;
+    height: 70px;
+    object-fit: contain;
     object-position: center center;
 
     @media (max-width: @mobile) {
-      width: 80px;
-      height: 80px;
+      width: 50px;
+      height: 50px;
       object-fit: contain;
     }
   }
@@ -156,17 +179,17 @@
   &__cat-name {
     text-align: center;
     margin-bottom: 0;
-    margin-top: 30px;
+    margin-top: 10px;
     font-weight: 600;
     color: var(--color9);
     font-family: var(--font2);
-    font-size: 35px;
+    font-size: 25px;
     letter-spacing: 1px;
     text-transform: uppercase;
 
     @media (max-width: @mobile) {
-      margin-top: 15px;
-      font-size: 20px;
+      margin-top: 10px;
+      font-size: 13px;
     }
   }
 }
@@ -205,10 +228,13 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    background-color: var(--color9v1);
+    padding-right: 40px;
 
     &::before {
       content: '';
-      width: 460px;
+      //width: 460px;
+      width: calc(100% + 30px);
       height: 852px;
       position: absolute;
       display: block;
@@ -224,7 +250,7 @@
       background-color: var(--color9v1);
       margin-bottom: 20px;
       &::before {
-        width: 100%;
+        width: calc(100% + 20px);
         height: 100%;
         left: -20px;
         display: none;
@@ -484,10 +510,18 @@
 
   &__holder {
     margin-top: 93px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    //display: flex;
+    //flex-wrap: wrap;
+    //justify-content: space-between;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fill, minmax(min-content, 417px));
     gap: var(--gap-md);
+
+    @media (max-width: 1408px) {
+      grid-template-columns: repeat(auto-fill, minmax(min-content, 300px));
+      margin-top: 40px;
+    }
 
     @media (max-width: @mobile) {
       margin-top: 40px;
@@ -496,10 +530,15 @@
 
   &__item {
     flex: 1 1 417px;
-    display: flex;
-    justify-content: flex-start;
+    //display: flex;
+    //justify-content: flex-start;
+    //align-items: center;
+    //flex-direction: column;
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-template-rows: 150px 100px 1fr;
+    justify-content: center;
     align-items: center;
-    flex-direction: column;
   }
 
   &__icon {
@@ -513,6 +552,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    margin-inline: auto;
   }
 
   &__img {
@@ -523,19 +563,36 @@
   }
 
   &__title {
-    margin-block: 25px 30px;
-    font-size: 35px;
+    //margin-block: 25px 30px;
+    margin: 0;
+    font-size: 30px;
     letter-spacing: 1px;
-    line-height: 100%;
+    line-height: 120%;
     text-transform: uppercase;
     font-weight: 600;
     color: var(--color-dark4);
+
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    color: var(--color-light);
+
+    @media (max-width: @mobile) {
+      font-size: 25px;
+      //color: var(--color-light);
+    }
   }
 
   &__info {
     font-family: var(--font3);
     font-size: 16px;
     line-height: 18px;
+    align-self: flex-start;
+    justify-self: flex-start;
+    text-align: justify;
   }
 }
 
@@ -609,6 +666,7 @@
   background-size: cover;
 
   padding-block: 40px;
+
   .hb-container2 {
     display: flex;
     flex-wrap: wrap;
