--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -864,19 +864,19 @@ body {
   background-color: var(--color-dark4);
   background-image: url(../img/hero-bg0.png);
   background-size: cover;
-  background-position: center center;
+  background-position: top center;
   position: relative;
 }
 .hb-front-hero::before {
   content: '';
   width: 100%;
-  height: 1179px;
+  height: 100%;
   position: absolute;
   display: block;
   top: 0;
   left: 0;
   pointer-events: none;
-  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
+  background: linear-gradient(to top, #000000 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
 }
 @media (max-width: 768px) {
   .hb-front-hero::before {
@@ -885,11 +885,11 @@ body {
 }
 .hb-front-hero .hb-container2 {
   position: relative;
-  padding-block: 671px 70px;
+  padding-block: 0 70px;
 }
 @media (max-width: 768px) {
   .hb-front-hero .hb-container2 {
-    padding-block: 50px 0;
+    padding-block: 0 0;
   }
 }
 .hb-front-hero__pre-title {
@@ -915,7 +915,6 @@ body {
   text-align: center;
   margin: 0;
   position: relative;
-  margin-bottom: 150px;
   filter: drop-shadow(-1.792px 4.668px 4px rgba(0, 0, 0, 0.34));
   font-weight: 600;
   font-size: 171px;
@@ -925,7 +924,7 @@ body {
 }
 @media (max-width: 768px) {
   .hb-front-hero__title {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
     font-size: 50px;
     line-height: 150%;
   }
@@ -934,7 +933,20 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 35px;
+  gap: 20px;
+  padding-block: 20px 150px;
+  position: relative;
+}
+.hb-front-hero__holder::before {
+  content: '';
+  width: 200vw;
+  height: 100%;
+  position: absolute;
+  display: block;
+  top: 0;
+  left: -50%;
+  pointer-events: none;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.7) 80%, rgba(255, 255, 255, 0.3) 100%);
 }
 @media (max-width: 768px) {
   .hb-front-hero__holder {
@@ -943,19 +955,10 @@ body {
     gap: 10px;
     align-items: flex-start;
   }
-  .hb-front-hero__holder::before {
-    content: '';
-    width: 200vw;
-    height: 100%;
-    position: absolute;
-    display: block;
-    top: 0;
-    left: -20px;
-    pointer-events: none;
-    background: linear-gradient(to bottom, rgba(255, 255, 225, 0) 0%, rgba(255, 255, 225, 0.7) 5%, rgba(255, 255, 225, 0.9) 50%, rgba(255, 255, 225, 0.7) 95%, rgba(255, 255, 225, 0.3) 100%);
-  }
 }
 .hb-front-hero__item {
+  position: relative;
+  z-index: 2;
   text-decoration: none;
   display: flex;
   flex-direction: column;
@@ -964,56 +967,57 @@ body {
 }
 @media (max-width: 768px) {
   .hb-front-hero__item {
-    position: relative;
-    z-index: 2;
-    flex: 0 1 140px;
+    flex: 0 1 90px;
   }
 }
 .hb-front-hero__cat-img-holder {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 152px;
-  height: 152px;
+  width: 130px;
+  height: 130px;
   padding: 10px;
   overflow: hidden;
   border: 5px solid var(--color-dark4);
   border-radius: 50%;
+  box-sizing: border-box;
 }
 @media (max-width: 768px) {
   .hb-front-hero__cat-img-holder {
-    width: 140px;
-    height: 140px;
+    width: 90px;
+    height: 90px;
+    border: 3px solid var(--color-dark4);
   }
 }
 .hb-front-hero__cat-img {
   display: table;
-  max-width: 142px;
-  max-height: 142px;
+  width: 70px;
+  height: 70px;
+  object-fit: contain;
   object-position: center center;
 }
 @media (max-width: 768px) {
   .hb-front-hero__cat-img {
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     object-fit: contain;
   }
 }
 .hb-front-hero__cat-name {
   text-align: center;
   margin-bottom: 0;
-  margin-top: 30px;
+  margin-top: 10px;
   font-weight: 600;
   color: var(--color9);
   font-family: var(--font2);
-  font-size: 35px;
+  font-size: 25px;
   letter-spacing: 1px;
   text-transform: uppercase;
 }
 @media (max-width: 768px) {
   .hb-front-hero__cat-name {
-    margin-top: 15px;
-    font-size: 20px;
+    margin-top: 10px;
+    font-size: 13px;
   }
 }
 .hb-front-savings {
@@ -1046,10 +1050,12 @@ body {
   display: flex;
   flex-direction: column;
   position: relative;
+  background-color: var(--color9v1);
+  padding-right: 40px;
 }
 .hb-front-savings__highlight::before {
   content: '';
-  width: 460px;
+  width: calc(100% + 30px);
   height: 852px;
   position: absolute;
   display: block;
@@ -1066,7 +1072,7 @@ body {
     margin-bottom: 20px;
   }
   .hb-front-savings__highlight::before {
-    width: 100%;
+    width: calc(100% + 20px);
     height: 100%;
     left: -20px;
     display: none;
@@ -1304,10 +1310,16 @@ body {
 }
 .hb-front-help__holder {
   margin-top: 93px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(auto-fill, minmax(min-content, 417px));
   gap: var(--gap-md);
+}
+@media (max-width: 1408px) {
+  .hb-front-help__holder {
+    grid-template-columns: repeat(auto-fill, minmax(min-content, 300px));
+    margin-top: 40px;
+  }
 }
 @media (max-width: 768px) {
   .hb-front-help__holder {
@@ -1316,10 +1328,11 @@ body {
 }
 .hb-front-help__item {
   flex: 1 1 417px;
-  display: flex;
-  justify-content: flex-start;
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-template-rows: 150px 100px 1fr;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
 .hb-front-help__icon {
   width: 150px;
@@ -1332,6 +1345,7 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
+  margin-inline: auto;
 }
 .hb-front-help__img {
   max-width: 120px;
@@ -1340,18 +1354,32 @@ body {
   object-position: center center;
 }
 .hb-front-help__title {
-  margin-block: 25px 30px;
-  font-size: 35px;
+  margin: 0;
+  font-size: 30px;
   letter-spacing: 1px;
-  line-height: 100%;
+  line-height: 120%;
   text-transform: uppercase;
   font-weight: 600;
   color: var(--color-dark4);
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: var(--color-light);
+}
+@media (max-width: 768px) {
+  .hb-front-help__title {
+    font-size: 25px;
+  }
 }
 .hb-front-help__info {
   font-family: var(--font3);
   font-size: 16px;
   line-height: 18px;
+  align-self: flex-start;
+  justify-self: flex-start;
+  text-align: justify;
 }
 .hb-front-customers {
   background-color: var(--color-dark4);
