home page ACF integrated

--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -3,7 +3,7 @@
 
 .hb-front-hero {
   background-color: var(--color-dark4);
-  background-image: url(../img/hero-bg0.png);
+  //background-image: url(../img/hero-bg0.png);
   background-size: cover;
   background-position: top center;
   position: relative;
@@ -638,6 +638,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     gap: var(--gap-sm);
     width: 100%;
     max-width: 785px;
