--- a/assets/styles/_woo-single-product.less
+++ b/assets/styles/_woo-single-product.less
@@ -461,3 +461,11 @@ ul.products {
   }
 }
 
+.woocommerce {
+  .single_add_to_cart_button.button.alt.wp-element-button {
+    background-color: var(--color9v1);
+    &:hover {
+      background-color: var(--color9v1);
+    }
+  }
+}
