front page update

--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -5,8 +5,16 @@
   background-color: var(--color-dark4);
   //background-image: url(../img/hero-bg0.png);
   background-size: cover;
-  background-position: top center;
+  //background-size: contain;
+  //background-position: top center;
+  background-position: top -150px center;
   position: relative;
+  background-repeat: no-repeat;
+
+  @media (max-width: @mobile) {
+    background-size: cover;
+    background-position: center center;
+  }
 
   &::before {
     content: '';
@@ -31,7 +39,7 @@
     position: relative;
     //z-index: 2;
     //padding-block: 671px 70px;
-    padding-block: 0 70px;
+    padding-block: 0 150px;
 
     @media (max-width: @mobile) {
       padding-block: 0 0;
@@ -42,17 +50,18 @@
     color: var(--color-light);
     text-align: center;
     margin: 0;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     font-weight: 600;
     text-transform: uppercase;
-    font-size: 47px;
+    //font-size: 47px;
+    font-size: 30px;
     letter-spacing: 2px;
     line-height: 100%;
 
     @media (max-width: @mobile) {
       font-size: 22px;
       margin-bottom: var(--gap-sm);
-      line-height: 100%;
+      line-height: 120%;
     }
   }
 
@@ -64,7 +73,8 @@
     position: relative;
     filter: drop-shadow(-1.792px 4.668px 4px rgba(0, 0, 0, 0.34));
     font-weight: 600;
-    font-size: 171px;
+    //font-size: 171px;
+    font-size: 120px;
     letter-spacing: 7px;
     line-height: 100%;
     text-transform: uppercase;
@@ -73,6 +83,7 @@
       margin-bottom: 20px;
       font-size: 50px;
       line-height: 150%;
+      letter-spacing: unset;
     }
   }
 
@@ -81,7 +92,8 @@
     justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
-    padding-block: 20px 150px;
+    //padding-block: 20px 150px;
+    padding-block: 20px 50px;
     position: relative;
 
     &::before {
@@ -242,7 +254,7 @@
       left: -30px;
       background-color: var(--color9v1);
       pointer-events: none;
-      
+
       @media (max-width: 1351px) {
         display: none;
       }
