--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -7,7 +7,7 @@
   background-size: cover;
   //background-size: contain;
   //background-position: top center;
-  background-position: top -150px center;
+  background-position: top center;
   position: relative;
   background-repeat: no-repeat;
 
@@ -27,7 +27,7 @@
     left: 0;
     pointer-events: none;
     //z-index: -1;
-    background: linear-gradient(to top, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
 
     @media (max-width: @mobile) {
       height: 600px;
@@ -39,10 +39,10 @@
     position: relative;
     //z-index: 2;
     //padding-block: 671px 70px;
-    padding-block: 0 150px;
+    padding-block: 570px 50px;
 
     @media (max-width: @mobile) {
-      padding-block: 0 0;
+      padding-block: 50px 0;
     }
   }
 
@@ -101,7 +101,8 @@
       width: 200vw;
       height: 100%;
       position: absolute;
-      display: block;
+      //display: block;
+      display: none;
       top: 0;
       left: -50%;
       //z-index: -1;
@@ -111,7 +112,7 @@
       rgba(255, 255, 255, .7) 20%,
       rgba(255, 255, 255, .9) 50%,
       rgba(255, 255, 255, .7) 80%,
-      rgba(255, 255, 255, .3) 100%,);
+      rgba(255, 255, 255, 0) 100%,);
     }
 
     @media (max-width: @mobile) {
@@ -119,6 +120,10 @@
       position: relative;
       gap: 10px;
       align-items: flex-start;
+
+      &::before {
+        display: block;
+      }
 
       //&::before {
       //  content: '';
