--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -795,7 +795,7 @@ body {
 .hb-front-hero {
   background-color: var(--color-dark4);
   background-size: cover;
-  background-position: top -150px center;
+  background-position: top center;
   position: relative;
   background-repeat: no-repeat;
 }
@@ -814,7 +814,7 @@ body {
   top: 0;
   left: 0;
   pointer-events: none;
-  background: linear-gradient(to top, #000000 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
+  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.54) 44%, rgba(49, 102, 141, 0) 100%);
 }
 @media (max-width: 768px) {
   .hb-front-hero::before {
@@ -823,11 +823,11 @@ body {
 }
 .hb-front-hero .hb-container2 {
   position: relative;
-  padding-block: 0 150px;
+  padding-block: 570px 50px;
 }
 @media (max-width: 768px) {
   .hb-front-hero .hb-container2 {
-    padding-block: 0 0;
+    padding-block: 50px 0;
   }
 }
 .hb-front-hero__pre-title {
@@ -881,11 +881,11 @@ body {
   width: 200vw;
   height: 100%;
   position: absolute;
-  display: block;
+  display: none;
   top: 0;
   left: -50%;
   pointer-events: none;
-  background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.7) 80%, rgba(255, 255, 255, 0.3) 100%);
+  background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.7) 80%, rgba(255, 255, 255, 0) 100%);
 }
 @media (max-width: 768px) {
   .hb-front-hero__holder {
@@ -893,6 +893,9 @@ body {
     position: relative;
     gap: 10px;
     align-items: flex-start;
+  }
+  .hb-front-hero__holder::before {
+    display: block;
   }
 }
 .hb-front-hero__item {
