--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -7,7 +7,7 @@
   background-size: cover;
   //background-size: contain;
   //background-position: top center;
-  background-position: top center;
+  background-position: top -150px center;
   position: relative;
   background-repeat: no-repeat;
 
@@ -39,7 +39,7 @@
     position: relative;
     //z-index: 2;
     //padding-block: 671px 70px;
-    padding-block: 570px 50px;
+    padding-block: 170px 50px;
 
     @media (max-width: @mobile) {
       padding-block: 50px 0;
@@ -101,12 +101,13 @@
       width: 200vw;
       height: 100%;
       position: absolute;
-      //display: block;
-      display: none;
+      display: block;
+      //display: none;
       top: 0;
-      left: -50%;
+      left: 0%;
       //z-index: -1;
       pointer-events: none;
+      transform: translateX(-50%);
       background: linear-gradient(to top,
       rgba(255, 255, 255, 0) 0%,
       rgba(255, 255, 255, .7) 20%,
@@ -122,7 +123,7 @@
       align-items: flex-start;
 
       &::before {
-        display: block;
+        //display: block;
       }
 
       //&::before {
