--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -795,7 +795,7 @@ body {
 .hb-front-hero {
   background-color: var(--color-dark4);
   background-size: cover;
-  background-position: top center;
+  background-position: top -150px center;
   position: relative;
   background-repeat: no-repeat;
 }
@@ -823,7 +823,7 @@ body {
 }
 .hb-front-hero .hb-container2 {
   position: relative;
-  padding-block: 570px 50px;
+  padding-block: 170px 50px;
 }
 @media (max-width: 768px) {
   .hb-front-hero .hb-container2 {
@@ -881,10 +881,11 @@ body {
   width: 200vw;
   height: 100%;
   position: absolute;
-  display: none;
+  display: block;
   top: 0;
-  left: -50%;
+  left: 0%;
   pointer-events: none;
+  transform: translateX(-50%);
   background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 20%, rgba(255, 255, 255, 0.9) 50%, rgba(255, 255, 255, 0.7) 80%, rgba(255, 255, 255, 0) 100%);
 }
 @media (max-width: 768px) {
@@ -893,9 +894,6 @@ body {
     position: relative;
     gap: 10px;
     align-items: flex-start;
-  }
-  .hb-front-hero__holder::before {
-    display: block;
   }
 }
 .hb-front-hero__item {
