home responsive background hero change

--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -11,6 +11,10 @@
   position: relative;
   background-repeat: no-repeat;
 
+  @media (max-width: 1336px) {
+    background-position: top center;
+  }
+
   @media (max-width: @mobile) {
     background-size: cover;
     background-position: center center;
