--- a/assets/styles/_front-page.less
+++ b/assets/styles/_front-page.less
@@ -288,7 +288,8 @@
     color: var(--color-dark4);
 
     @media (max-width: 1351px) {
-      font-size: 120px;
+      font-size: 110px;
+      letter-spacing: 0px;
     }
   }
 
@@ -302,7 +303,8 @@
     z-index: 2;
 
     @media (max-width: 13511px) {
-      font-size: 70px;
+      font-size: 60px;
+      letter-spacing: 0px;
     }
   }
 
