--- a/assets/styles/all.css
+++ b/assets/styles/all.css
@@ -362,6 +362,26 @@ body {
   text-transform: uppercase;
   text-decoration: none;
 }
+.hb-plain-form {
+  width: 100%;
+  max-width: 600px;
+}
+.hb-plain-form .hb-plain-input label {
+  display: table;
+}
+.hb-plain-form .hb-plain-input input {
+  display: block;
+  width: 100%;
+  padding: var(--gap-xsm);
+  border-color: var(--color1);
+}
+.hb-plain-form .hb-plain-input button[type="submit"] {
+  background: var(--color1);
+  color: var(--color-light);
+  border: none;
+  padding: var(--gap-xsm) var(--gap-sm);
+  cursor: pointer;
+}
 .site-header:not(.header_is_front) {
   padding-bottom: var(--gap-sm);
 }
